2010-08-14  Patrick Gansterer  <paroga@paroga.com>

        Reviewed by Kenneth Rohde Christiansen.

        [CMake] Set target properties only if available
        https://bugs.webkit.org/show_bug.cgi?id=43978

        * CMakeLists.txt:

2010-08-14  Dirk Schulze  <krit@webkit.org>

        Unreviewed sort of Xcode project file.

        * WebCore.xcodeproj/project.pbxproj:

2010-08-14  Ariya Hidayat  <ariya@sencha.com>

        Reviewed by Simon Hausmann and Kenneth Rohde Christiansen.

        [Qt] Refactor shadow state handling in GraphicsContextQt
        https://bugs.webkit.org/show_bug.cgi?id=44006

        * platform/graphics/qt/GraphicsContextQt.cpp:
        (WebCore::GraphicsContextPlatformPrivate::): Added shadow states as
        member variables.
        (WebCore::GraphicsContextPlatformPrivate::hasShadow): Convenient
        function to check whether there is shadow or not.
        (WebCore::GraphicsContextPlatformPrivate::GraphicsContextPlatformPrivate):
        (WebCore::GraphicsContext::drawRect): Use shadow states instead of
        calling getShadow.
        (WebCore::GraphicsContext::drawLine): ditto.
        (WebCore::GraphicsContext::strokeArc): ditto.
        (WebCore::GraphicsContext::drawConvexPolygon): ditto.
        (WebCore::GraphicsContext::fillPath): ditto.
        (WebCore::GraphicsContext::strokePath): ditto.
        (WebCore::GraphicsContext::fillRect): Removes the use of helper function
        drawBorderlessRectShadow as the code already becomes a lot simpler.
        (WebCore::GraphicsContext::fillRoundedRect): Removes the use of helper
        function drawFilledShadowPath as the code already becomes a lot simpler.
        (WebCore::GraphicsContext::setPlatformShadow): Store shadow states
        and find out the shadow type (complexity) for future use.
        (WebCore::GraphicsContext::clearPlatformShadow): Reset shadow states.

2010-08-13  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.
