@@ -233,6 +233,7 @@ void HTMLCanvasElement::reset()
         return;
 
     bool ok;
+    bool hadImageBuffer = hasCreatedImageBuffer();
     int w = getAttribute(widthAttr).toInt(&ok);
     if (!ok || w < 0)
         w = DefaultWidth;
@@ -248,7 +249,6 @@ void HTMLCanvasElement::reset()
         static_cast<WebGLRenderingContext*>(m_context.get())->reshape(width(), height());
 #endif
 
-    bool hadImageBuffer = hasCreatedImageBuffer();
     if (m_context && m_context->is2d())
         static_cast<CanvasRenderingContext2D*>(m_context.get())->reset();
 
