@@ -1,3 +1,15 @@
+2010-08-14  Matthew Delaney  <mdelaney@apple.com>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        Canvas is not reset when setting canvas.width
+        https://bugs.webkit.org/show_bug.cgi?id=43341
+
+        * html/HTMLCanvasElement.cpp:
+        (WebCore::HTMLCanvasElement::reset): Moved the call to
+        hasCreatedImageBuffer up *before* the call to setSurface since setSurface
+        sets hasCreatedImageBuffer to false every time.
+
 2010-08-14  Patrick Gansterer  <paroga@paroga.com>
 
         Reviewed by Kenneth Rohde Christiansen.
